Bug 1265873 - Use gfxSharedReadLock in TextureClientPool r=nical