gfx/layers/client/TextureClientPool.cpp
@@ -6,6 +6,7 @@
 #include "TextureClientPool.h"
 #include "CompositableClient.h"
 #include "mozilla/layers/CompositableForwarder.h"
+#include "mozilla/layers/TiledContentClient.h"
 
 #include "gfxPrefs.h"
 
@@ -157,16 +158,17 @@ TextureClientPool::ReturnTextureClient(TextureClient *aClient)
 }
 
 void
-TextureClientPool::ReturnTextureClientDeferred(TextureClient *aClient)
+TextureClientPool::ReturnTextureClientDeferred(TextureClient *aClient, gfxSharedReadLock* aLock)
 {
   if (!aClient) {
     return;
   }
+  MOZ_ASSERT(aLock);
 #ifdef GFX_DEBUG_TRACK_CLIENTS_IN_POOL
   DebugOnly<bool> ok = TestClientPool("defer", aClient, this);
   MOZ_ASSERT(ok);
 #endif
-  mTextureClientsDeferred.push(aClient);
+  mTextureClientsDeferred.push_back(TextureClientHolder(aClient, aLock));
   TCP_LOG("TexturePool %p had client %p defer-returned, size %u outstanding %u\n",
       this, aClient, mTextureClientsDeferred.size(), mOutstandingClients);
   ShrinkToMaximumSize();
@@ -188,9 +190,9 @@ TextureClientPool::ShrinkToMaximumSize()
       MOZ_ASSERT(mOutstandingClients > 0);
       mOutstandingClients--;
       TCP_LOG("TexturePool %p dropped deferred client %p; %u remaining\n",
-          this, mTextureClientsDeferred.top().get(),
+          this, mTextureClientsDeferred.front().mTextureClient.get(),
           mTextureClientsDeferred.size() - 1);
-      mTextureClientsDeferred.pop();
+      mTextureClientsDeferred.pop_front();
     } else {
       if (!mTextureClients.size()) {
         // Getting here means we're over our desired number of TextureClients
@@ -211,6 +213,16 @@ TextureClientPool::ShrinkToMaximumSize()
 void
 TextureClientPool::ShrinkToMinimumSize()
 {
+  ReturnUnlockedClients();
+
+  while (!mTextureClientsDeferred.empty()) {
+    MOZ_ASSERT(mOutstandingClients > 0);
+    mOutstandingClients--;
+    TCP_LOG("TexturePool %p releasing deferred client %p\n",
+        this, mTextureClientsDeferred.front().mTextureClient.get());
+    mTextureClientsDeferred.pop_front();
+  }
+
   TCP_LOG("TexturePool %p shrinking to minimum size %u\n", this, sMinCacheSize);
   while (mTextureClients.size() > sMinCacheSize) {
     TCP_LOG("TexturePool %p popped %p; shrunk to %u\n",
@@ -224,13 +236,12 @@ TextureClientPool::ReturnDeferredClients()
 {
   TCP_LOG("TexturePool %p returning %u deferred clients to pool\n",
       this, mTextureClientsDeferred.size());
-  while (!mTextureClientsDeferred.empty()) {
-    mTextureClients.push(mTextureClientsDeferred.top());
-    mTextureClientsDeferred.pop();
 
-    MOZ_ASSERT(mOutstandingClients > 0);
-    mOutstandingClients--;
+  if (mTextureClientsDeferred.empty()) {
+    return;
   }
+
+  ReturnUnlockedClients();
   ShrinkToMaximumSize();
 
   // Kick off the pool shrinking timer if there are still more unused texture
@@ -239,6 +250,24 @@ TextureClientPool::ReturnDeferredClients()
     TCP_LOG("TexturePool %p kicking off shrink-to-min timer\n", this);
     mTimer->InitWithFuncCallback(ShrinkCallback, this, mShrinkTimeoutMsec,
                                  nsITimer::TYPE_ONE_SHOT);
+  }
+}
+
+void
+TextureClientPool::ReturnUnlockedClients()
+{
+  for (auto it = mTextureClientsDeferred.begin(); it != mTextureClientsDeferred.end();) {
+    MOZ_ASSERT((*it).mLock->GetReadCount() >= 1);
+    // Last count is held by the lock itself.
+    if ((*it).mLock->GetReadCount() == 1) {
+      mTextureClients.push((*it).mTextureClient);
+      it = mTextureClientsDeferred.erase(it);
+
+      MOZ_ASSERT(mOutstandingClients > 0);
+      mOutstandingClients--;
+    } else {
+      it++;
+    }
   }
 }
 
@@ -264,8 +293,8 @@ TextureClientPool::Clear()
     MOZ_ASSERT(mOutstandingClients > 0);
     mOutstandingClients--;
     TCP_LOG("TexturePool %p releasing deferred client %p\n",
-        this, mTextureClientsDeferred.top().get());
-    mTextureClientsDeferred.pop();
+        this, mTextureClientsDeferred.front().mTextureClient.get());
+    mTextureClientsDeferred.pop_front();
   }
 }
 
